--- a/src/blocks/hiw/_hiw.scss
+++ b/src/blocks/hiw/_hiw.scss
@@ -5,44 +5,68 @@
       rgba(255, 255, 255, 0.17) 0%,
       rgba(255, 255, 255, 0) 100%
     );
+    padding-block: var(--indent-card);
+
+    @include media(md, max) {
+      padding-inline: var(--indent-card);
+    }
   }
 
   &__container {
     display: flex;
     align-items: flex-start;
-    padding: 128px var(--indent-sm) var(--indent-sm);
-    gap: 16px;
+    padding: clamp(1.875rem, -5.125rem + 10.9375vw, 8rem) var(--indent-sm)
+      var(--indent-sm);
+    gap: 1em;
   }
 
   &__images {
     flex: auto;
-    position: sticky;
-    top: var(--indent-lg);
 
-    display: grid;
-    max-block-size: 100vh;
-    max-block-size: 100dvb;
-    justify-content: center;
+    @include media(md) {
+      position: sticky;
+      top: 20vh;
+
+      display: grid;
+      // max-block-size: 55vh;
+      // max-block-size: 55dvb;
+      overflow: hidden;
+      justify-content: center;
+    }
+  }
+
+  &__image-wrap {
+    inline-size: min(22em, 100%);
+
+    @include media(md) {
+      grid-area: 1/2/1/2;
+      opacity: 0;
+      pointer-events: none;
+      &_active {
+        opacity: 1;
+        pointer-events: initial;
+      }
+    }
   }
 
   &__image {
-    grid-area: 1/2/1/2;
+    inline-size: 100%;
+    block-size: 100%;
     object-position: center;
     object-fit: contain;
-    opacity: 0;
-    pointer-events: none;
-
-    &_active {
-      opacity: 1;
-      pointer-events: initial;
-    }
   }
 
   &__list {
     flex-basis: 550px;
     display: flex;
     flex-direction: column;
-    gap: 228px;
+    gap: clamp(7.8125rem, 0.4554rem + 11.4955vw, 14.25rem);
+    margin-block-end: 35em;
+
+    @include media(md, max) {
+      margin-block-end: 0;
+      display: none;
+    }
   }
 
   &__list-item {
@@ -62,6 +86,5 @@
     color: var(--text-accent-secondary-color);
     font-size: var(--text-md);
     font-weight: 500;
-    line-height: 150%;
   }
 }
