--- a/src/blocks/how/_how.scss
+++ b/src/blocks/how/_how.scss
@@ -14,15 +14,20 @@
     background-size: cover;
 
     display: flex;
-    gap: var(--indent-xxxl);
+    gap: clamp(2.5rem, -5.3571rem + 12.2768vw, 9.375rem); // 150
+    color: var(--text-accent-color);
+    padding-block: var(--indent-card);
+
+    @include media(md, max) {
+      padding-inline: var(--indent-card);
+      flex-direction: column;
+    }
   }
 
-  &__image {
+  &__image-wrap {
     flex: none;
-    inline-size: 400px;
-    block-size: 400px;
-    object-fit: contain;
-    object-position: center;
+    inline-size: 100%;
+    block-size: 100%;
     border-radius: var(--border-radius-lg);
     background: rgba(255, 255, 255, 0.2);
     box-shadow:
@@ -30,22 +35,46 @@
       0px 14px 16px 0px rgba(0, 0, 0, 0.26),
       0px 4px 0px 0px rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(9px);
+
+    @include media(md) {
+      inline-size: clamp(17em, 30vw, 25em);
+      block-size: clamp(17em, 30vw, 25em);
+    }
+  }
+
+  &__image {
+    inline-size: 100%;
+    block-size: 100%;
+    object-fit: contain;
+    object-position: center;
   }
 
   &__content {
     flex: auto;
+
+    display: flex;
+    flex-direction: column;
+
+    @include media(md) {
+      align-items: flex-start;
+    }
   }
 
   &__title {
-    text-align: left;
     margin-block-end: var(--indent-xxs);
+    @include media(md) {
+      text-align: left;
+    }
   }
 
   &__description {
     color: var(--text-accent-secondary-color);
     font-size: var(--text-md);
     font-weight: 500;
-    line-height: 150%;
     margin-block-end: var(--indent-lg);
+  }
+
+  &__button {
+    margin-block-start: auto;
   }
 }
