--- a/src/blocks/lead/_lead.scss
+++ b/src/blocks/lead/_lead.scss
@@ -1,4 +1,5 @@
 .lead {
+  padding-block: 0;
   overflow: hidden;
   position: relative;
 
@@ -19,7 +20,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 2em;
-    padding-block-start: clamp(3rem, -3.5714rem + 10.2679vw, 8.75rem); // 140
+    padding-block-start: clamp(3rem, -5.5714rem + 13.3929vw, 10.5rem); // 168
     padding-block-end: clamp(4rem, -4.8571rem + 13.8393vw, 11.75rem); // 188
 
     @include media(md) {
@@ -30,17 +31,12 @@
   &__content {
     flex-basis: min(692px, 100%);
     flex-grow: 1;
-    text-align: center;
-
-    @include media(md) {
-      text-align: left;
-    }
   }
 
   &__title {
     font-size: var(--display-md);
     font-weight: 700;
-    line-height: 1;
+    line-height: .95;
     margin-block-end: var(--indent-md);
   }
 
@@ -55,7 +51,6 @@
     font-size: var(--text-lg);
     color: var(--text-secondary-color);
     font-weight: 500;
-    line-height: 1.5;
   }
 
   &__controls {
@@ -72,11 +67,11 @@
 
   &__images {
     position: relative;
-    flex: 1 1 min(400px, 100%);
+    flex: 1 1 min(250px, 100%);
     min-block-size: clamp(200px, 40vh, 400px);
 
     @include media(lg) {
-      flex-basis: min(650px, 100%);
+      flex-basis: min(630px, 100%);
     }
   }
 
@@ -88,15 +83,15 @@
       inset: 0 auto auto 0;
 
       @include media(lg) {
-        inset: -18% auto auto 15%;
+        inset: -23% auto auto 15%;
       }
     }
 
     &_content_dark {
-      inset: 30% auto auto 45%;
+      inset: 15% auto auto 45%;
 
       @include media(lg) {
-        inset: 38% auto auto 85%;
+        inset: 32% auto auto 85%;
       }
     }
 
