--- a/src/blocks/section/_section.scss
+++ b/src/blocks/section/_section.scss
@@ -1,8 +1,8 @@
 .section {
-  padding: 0.75em 1.5em;
+  padding: 0.75em clamp(1em, 2.5vw, 1.5em);
 
   &__indent {
-    padding: var(--indent-main-horizontal) var(--indent-main-wide);
+    padding: var(--indent-section) var(--indent-main);
   }
 
   &__card {
@@ -17,16 +17,21 @@
       background-color: var(--main-color);
       color: var(--text-accent-color);
     }
+
+    @include media(md, max) {
+      padding-inline: 0;
+    }
   }
 
   &__title {
     font-weight: 700;
+    line-height: 1;
     font-size: var(--heading-md);
     text-align: center;
     margin-block-end: var(--indent-xl);
 
     &_section-indent {
-      @extend .section__indent;
+      padding-inline: var(--indent-main);
     }
   }
 
@@ -56,5 +61,9 @@
 
   &_no-indent {
     padding-inline: 0;
+
+    .section__indent {
+      padding-inline: var(--indent-main-wide);
+    }
   }
 }
