--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -14,6 +14,7 @@ body {
   margin: 0 auto;
   font-family: var(--main-font-family, 'Raleway', sans-serif);
   font-size: 16px;
+  line-height: 1.3;
   color: var(--text-main-color);
   background-color: var(--bg-main-color, #ffffff);
 }
