--- a/src/blocks/section/_section.scss
+++ b/src/blocks/section/_section.scss
@@ -32,6 +32,7 @@
 
     &_section-indent {
       padding-inline: var(--indent-main);
+      padding-block-start: var(--indent-section);
     }
   }
 
