--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,6 +27,7 @@
 @import '../blocks/how/how';
 @import '../blocks/hiw/hiw';
 @import '../blocks/step/step';
+@import '../blocks/theme/theme';
 // @import '../blocks/not-found/not-found';
 
 // Modals
