--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+* {
+  // border: 0.5px solid;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -14,7 +18,7 @@ body {
   margin: 0 auto;
   font-family: var(--main-font-family, 'Raleway', sans-serif);
   font-size: 16px;
-  line-height: 1.3;
+  line-height: 1.5;
   color: var(--text-main-color);
   background-color: var(--bg-main-color, #ffffff);
 }
