--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,6 +28,7 @@
 @import '../blocks/hiw/hiw';
 @import '../blocks/step/step';
 @import '../blocks/theme/theme';
+@import '../blocks/pricing/pricing';
 // @import '../blocks/not-found/not-found';
 
 // Modals
