--- a/src/blocks/card/_card.scss
+++ b/src/blocks/card/_card.scss
@@ -43,7 +43,7 @@
         inset: 1.875rem 1.875rem auto auto;
         block-size: 32px;
         inline-size: 32px;
-        background-color: var(--accent-color);
+        background-color: var(--secondary-color);
 
         display: block;
         mask-repeat: no-repeat;
