--- a/src/blocks/hiw/_hiw.scss
+++ b/src/blocks/hiw/_hiw.scss
@@ -71,7 +71,7 @@
 
   &__list-item {
     padding-inline-start: var(--indent-sm);
-    border-inline-start: 4px solid var(--accent-color);
+    border-inline-start: 4px solid var(--secondary-color);
     display: flex;
     flex-direction: column;
     gap: 0.5em;
