--- a/src/blocks/list-bullet-decor/_list-bullet-decor.scss
+++ b/src/blocks/list-bullet-decor/_list-bullet-decor.scss
@@ -11,7 +11,7 @@
       display: block;
       inline-size: 10px;
       block-size: 10px;
-      border: 2px solid var(--accent-color);
+      border: 2px solid var(--secondary-color);
       border-radius: 4px;
     }
   }
