--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,8 +17,8 @@
   --main-color: #f43f5e;
   --main-color-opacity: 244, 63, 94;
 
-  --accent-color: #84cc16;
-  --accent-color-opacity: 132, 204, 22;
+  --secondary-color: #84cc16;
+  --secondary-color-opacity: 132, 204, 22;
 
   --text-main-color: var(--grey-800);
   --text-secondary-color: var(--grey-600);
