--- a/src/blocks/pricing/_pricing.scss
+++ b/src/blocks/pricing/_pricing.scss
@@ -3,6 +3,15 @@
   }
 
   &__card {
+    color: var(--text-main-color);
+    background-color: var(--bg-main-color);
+    border-radius: var(--border-radius-xl);
+    padding: var(--indent-card);
+
+    display: grid;
+    align-items: center;
+    gap: var(--indent-lg) var(--indent-xl);
+    grid-template-columns: 1fr 1fr;
   }
 
   &__card-tabs {
@@ -14,20 +23,72 @@
   }
 
   &__card-main-info {
+    display: flex;
+    flex-direction: column;
+    gap: var(--indent-xxs);
   }
 
   &__card-title {
+    font-weight: 700;
+    line-height: normal;
+    font-size: var(--heading-sm);
   }
 
   &__card-description {
+    font-size: var(--text-md);
+    font-weight: 500;
   }
 
   &__card-list {
+    font-size: var(--text-md);
+    font-weight: 500;
+    list-style-type: disc;
+    padding-inline-start: 1.25em;
   }
 
-  &__card-total {
+  &__card-total-price {
+    grid-area: 1/1/3/2;
+    place-self: center;
+
+    display: grid;
+    gap: var(--indent-xl);
+    padding-block-end: var(--indent-xl);
   }
 
   &__card-price {
+    grid-area: 1/1/2/2;
+    align-self: end;
+
+    font-size: var(--heading-md);
+    font-weight: 700;
+
+    display: flex;
+    flex-direction: column;
+    justify-items: flex-end;
+    align-items: center;
+    text-align: center;
+
+    opacity: 0;
+    pointer-events: none;
+    user-select: none;
+
+    &_actived {
+      opacity: 1;
+      user-select: unset;
+      pointer-events: unset;
+    }
+  }
+
+  &__card-price-info {
+    font-size: var(--text-md);
+    color: var(--text-secondary-color);
+    font-weight: 500;
+  }
+
+  &__card-price-low {
+    text-decoration: line-through;
+    font-size: var(--heading-sm);
+    color: var(--text-secondary-color);
+    font-weight: 500;
   }
 }
