--- a/src/blocks/text-decor/_text-decor.scss
+++ b/src/blocks/text-decor/_text-decor.scss
@@ -1,6 +1,6 @@
 .text-decor {
   color: var(--main-color);
-  &_accent {
-    color: var(--accent-color);
+  &_secondary {
+    color: var(--secondary-color);
   }
 }
