--- a/src/blocks/button/_button.scss
+++ b/src/blocks/button/_button.scss
@@ -5,9 +5,9 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
-  min-block-size: 3.5rem;
-  padding: 1rem 2.375rem;
+  gap: 0.8em;
+  min-block-size: 3.5em;
+  padding: 0.8rem 1.9em;
   text-align: center;
   border: 1px solid currentColor;
   outline: 4px solid transparent;
@@ -18,7 +18,6 @@
     font-size: var(--text-md);
     line-height: 1.2;
     font-weight: 700;
-    // flex: auto;
     color: inherit;
   }
 
@@ -41,7 +40,7 @@
   }
 
   &:focus-visible {
-    outline-color: rgba(var(--main-color-opacity), .5);
+    outline-color: rgba(var(--main-color-opacity), 0.5);
   }
 
   &_theme {
@@ -71,7 +70,7 @@
 
   &_content {
     &_icon-arrow-next {
-      padding-inline-end: 0.5em;
+      padding-inline-end: 1.75em;
 
       &:hover .button__icon svg {
         animation:
