--- a/src/blocks/pricing/_pricing.scss
+++ b/src/blocks/pricing/_pricing.scss
@@ -4,21 +4,43 @@
 
   &__card {
     color: var(--text-main-color);
-    background-color: var(--bg-main-color);
+    background-color: var(--bg-secondary-color);
     border-radius: var(--border-radius-xl);
     padding: var(--indent-card);
 
     display: grid;
     align-items: center;
     gap: var(--indent-lg) var(--indent-xl);
-    grid-template-columns: 1fr 1fr;
+
+    @include media(lg) {
+      grid-template-columns: 1fr 1fr;
+    }
   }
 
   &__card-tabs {
+    padding: 0.25em;
+    border: 1px solid var(--text-secondary-color);
+    border-radius: var(--border-radius-sm);
+
+    display: flex;
+    flex-wrap: wrap;
+
+    grid-area: 1/1/2/2;
+
+    @include media(lg) {
+      justify-self: start;
+      grid-area: unset;
+    }
   }
 
   &__card-tab {
+    flex: auto;
+    border-color: transparent;
+    color: var(--grey-300);
     &_actived {
+      background-color: var(--bg-accent-color);
+      border-color: var(--bg-accent-color);
+      color: var(--white);
     }
   }
 
@@ -47,12 +69,18 @@
   }
 
   &__card-total-price {
-    grid-area: 1/1/3/2;
     place-self: center;
+    background-color: var(--bg-main-color);
+    border-radius: var(--border-radius-sm);
+    padding: var(--indent-xxs);
 
     display: grid;
     gap: var(--indent-xl);
     padding-block-end: var(--indent-xl);
+
+    @include media(lg) {
+      grid-area: 1/1/3/2;
+    }
   }
 
   &__card-price {
