--- a/src/blocks/theme/_theme.scss
+++ b/src/blocks/theme/_theme.scss
@@ -1,5 +1,6 @@
 .theme {
-  &__container {
+  &__title {
+    margin-block-end: var(--indent-md);
   }
 
   &__card {
@@ -15,28 +16,58 @@
     }
 
     &_theme_light {
-      grid-template-columns: 0.77fr 0.532fr;
       &::before {
         content: '';
-        inset: 0 0 0 auto;
-        inline-size: calc(var(--indent-main-wide) + 27.5%);
+        inset: 0 0 auto auto;
+        inline-size: calc(var(--indent-main-wide) + 50%);
+        block-size: 12em;
         border-radius: var(--border-radius-xl) 0 0 var(--border-radius-xl);
         background-color: var(--bg-secondary-color);
+      }
+
+      .theme__card-image-wrap {
+        grid-area: 1/1/2/2;
+        @include media(md) {
+          grid-area: 1/2/3/3;
+        }
+      }
+
+      @include media(md) {
+        grid-template-columns: 0.77fr 0.532fr;
+        &::before {
+          content: '';
+          inset: 0 0 0 auto;
+          block-size: unset;
+          inline-size: calc(var(--indent-main-wide) + 27.5%);
+        }
       }
     }
 
     &_theme_dark {
-      grid-template-columns: 0.532fr 0.77fr;
       &::before {
         content: '';
-        inset: 0 auto 0 0;
-        inline-size: calc(var(--indent-main-wide) + 27.5%);
+        inset: 0 auto auto 0;
+        inline-size: calc(var(--indent-main-wide) + 50%);
+        block-size: 12em;
         border-radius: 0 var(--border-radius-xl) var(--border-radius-xl) 0;
         background-color: var(--bg-accent-color);
       }
 
       .theme__card-image-wrap {
-        grid-area: 1/1/3/2;
+        grid-area: 1/1/2/2;
+        @include media(md) {
+          grid-area: 1/1/3/2;
+        }
+      }
+
+      @include media(md) {
+        grid-template-columns: 0.532fr 0.77fr;
+        &::before {
+          content: '';
+          inset: 0 auto 0 0;
+          block-size: unset;
+          inline-size: calc(var(--indent-main-wide) + 27.5%);
+        }
       }
     }
   }
@@ -56,15 +87,17 @@
 
   &__card-image-wrap {
     inline-size: 100%;
-    grid-area: 1/2/3/3;
     text-align: center;
   }
 
   &__card-image {
-    inline-size: min(13.75em, 100%);
+    inline-size: clamp(9.375rem, 4.375rem + 7.8125vw, 13.75rem);
     block-size: 100%;
     object-fit: contain;
     object-position: center;
+    @include media(md) {
+      inline-size: min(13.75em, 100%);
+    }
   }
 
   &__caption {
