--- a/src/blocks/hiw/_hiw.scss
+++ b/src/blocks/hiw/_hiw.scss
@@ -5,19 +5,16 @@
       rgba(255, 255, 255, 0.17) 0%,
       rgba(255, 255, 255, 0) 100%
     );
-    padding-block: var(--indent-card);
-
-    @include media(md, max) {
-      padding-inline: var(--indent-card);
-    }
   }
 
   &__container {
     display: flex;
     align-items: flex-start;
-    padding: clamp(1.875rem, -5.125rem + 10.9375vw, 8rem) var(--indent-sm)
-      var(--indent-sm);
-    gap: 1em;
+    gap: var(--indent-xxs);
+
+    @include media(md) {
+      padding-block-start: var(--indent-xxl);
+    }
   }
 
   &__images {
@@ -25,11 +22,9 @@
 
     @include media(md) {
       position: sticky;
-      top: 20vh;
+      top: 10vh;
 
       display: grid;
-      // max-block-size: 55vh;
-      // max-block-size: 55dvb;
       overflow: hidden;
       justify-content: center;
     }
@@ -60,11 +55,10 @@
     flex-basis: 550px;
     display: flex;
     flex-direction: column;
-    gap: clamp(7.8125rem, 0.4554rem + 11.4955vw, 14.25rem);
-    margin-block-end: 35em;
+    gap: var(--indent-xxxl);
+    margin-block-end: 50vh;
 
     @include media(md, max) {
-      margin-block-end: 0;
       display: none;
     }
   }
