--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-* {
-  // border: 0.5px solid;
-}
+// * {
+//   border: 0.5px solid;
+// }
 
 html {
   scroll-behavior: smooth;
