--- a/src/blocks/pricing/_pricing.scss
+++ b/src/blocks/pricing/_pricing.scss
@@ -1,5 +1,8 @@
 .pricing {
-  &__container {
+  &__indent {
+    @include media(md, max) {
+      padding: var(--indent-md);
+    }
   }
 
   &__card {
@@ -80,6 +83,9 @@
 
     @include media(lg) {
       grid-area: 1/1/3/2;
+      background-color: transparent;
+      border-radius: unset;
+      padding: 0;
     }
   }
 
@@ -87,7 +93,7 @@
     grid-area: 1/1/2/2;
     align-self: end;
 
-    font-size: var(--heading-md);
+    font-size: clamp(2.5rem, 1.9718rem + 2.2535vw, 4rem); // 64
     font-weight: 700;
 
     display: flex;
